# Graduation-Project

Nextion/: calibri_11.zi  calibri_16.zi  calibri_16_bold.zi  calibri_24.zi  calibri_26.zi  calibri_28.zi  calibri_32.zi  calibri_40.zi  calibri_48.zi
camera_detection/: Camera Detection App.bat  main.py
camera_detection/aws_cert/: controlSystem-Policy
camera_detection/test/: cam_couter.py  people_counter.py  test.py
control_system_firmware/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
control_system_firmware/main/: CMakeLists.txt  app_main.c
control_system_firmware/main/AWS/: aws.c  aws.h
control_system_firmware/main/BASIC/: appTask.c  appTask.h  panasonic_signal.h
control_system_firmware/main/CERT/: certificate.pem  certificate.pem.crt  private.pem.key
control_system_firmware/main/INCLUDE/: common.h  config.h
control_system_firmware/main/IR/: IRSend.c  IRSend.h  panasonic.h
control_system_firmware/main/NEXTION/: nextion.c  nextion.h
control_system_firmware/main/OTA/: ota.c  ota.h
control_system_firmware/main/SENSOR/: aht21.c  aht21.h  ens160.c  ens160.h  sensor.c  sensor.h
control_system_firmware/main/WIFI/: WiFiDriver.c
control_system_firmware/main/WS2812B/: ws2812b.c  ws2812b.h
mobile_app/: settings.gradle
mobile_app/amplify/: team-provider-info.json
mobile_app/amplify/.config/: project-config.json
mobile_app/app/: build.gradle
server_OTA/: database.sqlite  package-lock.json  package.json  server.js
server_OTA/assets/: styleIndex.css
server_OTA/views/: index.html  signIn.html  signOut.html
(+62 files in other folders)
